# scrapeco

./: .gitignore  CLAUDE.md  README.md  database.py  main.py  mock_enhanced.py  models.py  neo4j_database.py  pyproject.toml  requirements.txt  run_platform.sh
data_schema/: druid_transmission_schema.json  linkedin_profile_schema.json
frontend/client/: package-lock.json  package.json
frontend/client/public/: index.html
frontend/client/src/: App.js  index.js  theme.js
frontend/client/src/components/: AdvancedGraphVisualization.js  AlertsDashboard.js  CompanyDeepDive.js  CompanyLeaderboard.js  CompanyNetworkGraph.js  FileUploadForm.js  GeographicHeatmap.js  GraphVisualization.js  ModeToggle.js  Navbar.js  PortfolioMap.js  PortfolioOverview.js  RecommendationEngine.js  SkillTrends.js  TalentFlowSankey.js  VCAnalyticsDashboard.js  VCFilters.js
frontend/client/src/components/visualizations/: GeographicHeatmap.js  SankeyDiagram.js  TalentFlowVisualizer.js
frontend/client/src/context/: VCContext.js
frontend/client/src/hooks/: useAuth.js
frontend/client/src/pages/: HomePage.js  LinkedinInstructionsPage.js  LoginPage.js  ResultsPage.js  UploadPage.js  VCDashboard.js
frontend/client/src/services/: aiService.js  api.js  testApi.js
frontend/server/: index.js  mockRecommendations.json  mockTalentFlow.json  package-lock.json  package.json  server_logs.txt
py_interfaces/: api.py  config.py  enrich_company.py  gnn_architecture.py  main.py  mock.py  mock_enhanced.py  models.py  neo4j_database.py  parser.py  requirements.txt  security.py
py_interfaces/scripts/: csv_to_txt.py  run_api.sh  setup.sh  test_api.py
spike_research/: __init__.py  requirements.txt
spike_research/api/: __init__.py  api.py
spike_research/core/: __init__.py  models.py
spike_research/database/: __init__.py  druid_database.py  neo4j_database.py
spike_research/gnn/: __init__.py
spike_research/utils/: __init__.py  config.py
src/components/: FileUploadForm.js
